# JetReconstructionBenchmarks.jl

./: .gitignore  README.md
EDM4hep/src/: EDM4hepJetsTimed.jl
cjetreconstruction/: .gitignore  CMakeLists.txt  README.md
cjetreconstruction/cmake/: FindJulia.cmake
cjetreconstruction/src/: cjetreconstruction-finder.cc  cjetreconstruction-utils.cc  cjetreconstruction-utils.hh
fastjet/: CMakeLists.txt  README.md
fastjet/src/: fastjet-finder.cc
results/: acat2025-nb.jl  juliacon2025-cbenchmarks-nb.jl
results/ACAT2025/: all-results.csv
results/JuliaCON2025/: c-benchmarks.csv
src/: benchmark-substructure.jl  benchmark.jl  generate-benchmarks-pp.sh  thread-run.jl
